--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
+    "electron-store": "^8.0.1",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
