--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
     "electron-store": "^8.0.1",
